chore: fix coverage config